--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:all": "pnpm run build",
+    "build:sdk": "cd packages/sdk && pnpm run build",
+    "publish:sdk": "cd packages/sdk && pnpm publish",
+    "build:create-component": "cd packages/create-component && pnpm run build",
+    "publish:create-component": "cd packages/create-component && pnpm publish"
   },
   "keywords": [],
   "author": "",
