--- a/.github/workflows/publish.create.component.yml
+++ b/.github/workflows/publish.create.component.yml
@@ -1,9 +1,12 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: KF SDK Build
+name: Kf Create component Publish
 
 on:
+  push:
+    branches:
+      - 'main'
   release:
     types: [created]
   # pull_request:
@@ -30,7 +33,7 @@ jobs:
         with:
           version: 7
           run_install: |
-            - args: [--frozen-lockfile, --strict-peer-dependencies=false]
+            - args: [--frozen-lockfile, --strict-peer-dependencies=false, --filter=@kissflow/create-kf-component]
 
       - name: git config
         run: |
@@ -38,13 +41,13 @@ jobs:
           git config --global user.name "sara"
             
       - name: Run build
-        run:  pnpm run build
+        run:  pnpm run build:create-component
 
       # disabled automatic version pump as it is conflicting with internal versioning
       # - name: pump package version
       #   run:  pnpm version patch
 
       - name: Publish package to npm
-        run:  pnpm publish --no-git-checks
+        run:  pnpm publish:create-component --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_CREATE_COMPONENT_TOKEN}}
