--- a/.github/workflows/publish.docs.yml
+++ b/.github/workflows/publish.docs.yml
@@ -1,15 +1,16 @@
 name: Deploy Documentation
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
-  # Using a different branch name? Replace `main` with your branch’s name
-  # push:
-  #   tags:
-  #     - doc-v*
-    # branches: [ main ]
-  
-  # release:
-  #   types: [created]
+  # Trigger the workflow every time you push docs changes to the `main` branch
+  push:
+    # branches: [ main, monorepo-change ]
+    tags:
+      - doc-v*
+    paths:
+      - 'docs/**'
+  # Trigger the workflow when a new release is created
+  release:
+    types: [created]
 
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
