--- a/.github/workflows/publish.create.component.yml
+++ b/.github/workflows/publish.create.component.yml
@@ -7,13 +7,8 @@ on:
   push:
     branches:
       - 'main'
-  release:
-    types: [created]
-  # pull_request:
-  #   types: [opened, closed]
-  # push:
-  #   branches:    
-  #     - 'beta'
+  # release:
+  #   types: [created]
 
 jobs:
   publish-npm:
