--- a/.github/workflows/publish.sdk.yml
+++ b/.github/workflows/publish.sdk.yml
@@ -4,13 +4,12 @@
 name: KF SDK Publish
 
 on:
-  release:
-    types: [created]
-  # pull_request:
-  #   types: [opened, closed]
-  # push:
-  #   branches:    
-  #     - 'beta'
+  push:
+    branches:    
+      - 'main'
+  # release:
+  #   types: [created]
+
 
 jobs:
   publish-npm:
