--- a/.github/workflows/publish.docs.yml
+++ b/.github/workflows/publish.docs.yml
@@ -3,15 +3,9 @@ name: Deploy Documentation
 on:
   # Trigger the workflow every time you push docs changes to the `main` branch
   push:
-    # branches: [ main, monorepo-change ]
+    branches: [ main ]
     paths:
       - 'docs/**'
-    tags:
-      - doc-v*
-
-  # Trigger the workflow when a new release is created
-  release:
-    types: [created]
 
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
