🐛 doc tset commit

--- a/docs/package.json
+++ b/docs/package.json
@@ -3,11 +3,11 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "astro": "astro",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.16.0",
