--- a/.github/workflows/publish.docs.yml
+++ b/.github/workflows/publish.docs.yml
@@ -3,7 +3,7 @@ name: Deploy Documentation
 on:
   # Trigger the workflow every time you push docs changes to the `main` branch
   push:
-    branches: [ main ]
+    branches: [ main, main-v2 ]
     paths:
       - 'docs/**'
 
