--- a/.github/workflows/publish.docs.yml
+++ b/.github/workflows/publish.docs.yml
@@ -26,6 +26,7 @@ jobs:
         uses: withastro/action@v1
         with:
           path: ./docs
+          package-manager: npm # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
   # deploy:
   #   needs: build
