--- a/.github/workflows/publish.create.component.yml
+++ b/.github/workflows/publish.create.component.yml
@@ -5,7 +5,7 @@ name: Kf Create component Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, main-v2 ]
     paths:
       - 'packages/create-component/**'
 
