--- a/.github/workflows/publish.create.component.yml
+++ b/.github/workflows/publish.create.component.yml
@@ -5,7 +5,7 @@ name: Kf Create component Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, ci-test ]
     paths:
       - 'packages/create-component/**'
   # Allows you to run this workflow manually from the Actions tab on GitHub.
