--- a/packages/create-component/package.json
+++ b/packages/create-component/package.json
@@ -8,9 +8,9 @@
     "create-kf-component": "index.js"
   },
   "files": [
+    "bin",
     "index.js",
-    "template/**/*",
-    "bin"
+    "template/**/*"
   ],
   "scripts": {
     "build": "unbuild"
