--- a/.github/workflows/publish.create.component.yml
+++ b/.github/workflows/publish.create.component.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           version: 7
           run_install: |
-            - args: [--frozen-lockfile, --strict-peer-dependencies=false]
+            - args: [--frozen-lockfile]
 
       - name: git config
         run: |
